; ModuleID = '/home/carl/AnghaBench/linux/fs/reiserfs/extr_xattr_user.c_user_set.c'
source_filename = "/home/carl/AnghaBench/linux/fs/reiserfs/extr_xattr_user.c_user_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xattr_handler = type { i32 }
%struct.dentry = type { i32 }
%struct.inode = type { i32 }

@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xattr_handler*, %struct.dentry*, %struct.inode*, i8*, i8*, i64, i32)* @user_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @user_set(%struct.xattr_handler* %0, %struct.dentry* %1, %struct.inode* %2, i8* %3, i8* %4, i64 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.xattr_handler*, align 8
  %10 = alloca %struct.dentry*, align 8
  %11 = alloca %struct.inode*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store %struct.xattr_handler* %0, %struct.xattr_handler** %9, align 8
  store %struct.dentry* %1, %struct.dentry** %10, align 8
  store %struct.inode* %2, %struct.inode** %11, align 8
  store i8* %3, i8** %12, align 8
  store i8* %4, i8** %13, align 8
  store i64 %5, i64* %14, align 8
  store i32 %6, i32* %15, align 4
  %16 = load %struct.inode*, %struct.inode** %11, align 8
  %17 = getelementptr inbounds %struct.inode, %struct.inode* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @reiserfs_xattrs_user(i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %7
  %22 = load i32, i32* @EOPNOTSUPP, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %8, align 4
  br label %33

24:                                               ; preds = %7
  %25 = load %struct.inode*, %struct.inode** %11, align 8
  %26 = load %struct.xattr_handler*, %struct.xattr_handler** %9, align 8
  %27 = load i8*, i8** %12, align 8
  %28 = call i32 @xattr_full_name(%struct.xattr_handler* %26, i8* %27)
  %29 = load i8*, i8** %13, align 8
  %30 = load i64, i64* %14, align 8
  %31 = load i32, i32* %15, align 4
  %32 = call i32 @reiserfs_xattr_set(%struct.inode* %25, i32 %28, i8* %29, i64 %30, i32 %31)
  store i32 %32, i32* %8, align 4
  br label %33

33:                                               ; preds = %24, %21
  %34 = load i32, i32* %8, align 4
  ret i32 %34
}

declare dso_local i32 @reiserfs_xattrs_user(i32) #1

declare dso_local i32 @reiserfs_xattr_set(%struct.inode*, i32, i8*, i64, i32) #1

declare dso_local i32 @xattr_full_name(%struct.xattr_handler*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
